# alzheimer

./: .gitignore  pyproject.toml
configs/: cfgs.yaml  configs.py
dataset/: train_features_sample.csv  train_labels_sample.csv
dataset/modified/: metadata.csv
requirements/: requirements.txt
research/: 1_sweetViz_EDA.ipynb
src/app/: app.py
src/app/utils/: utils.py
